force-app/main/default/objects/Conga_Setting__mdt/Conga_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Conga Setting</label>
    <pluralLabel>Conga Settings</pluralLabel>
</CustomObject>