force-app/main/default/objects/Conga_Setting__mdt/fields/QueryID__c.field-meta.xml
<CustomField>
    <fullName>QueryID__c</fullName>
    <label>QueryID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>