force-app/main/default/objects/Conga_Setting__mdt/fields/SRO_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>SRO_Officer_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>SRO Officer Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>