force-app/main/default/objects/Conga_Setting__mdt/fields/SRO_Officer_Names__c.field-meta.xml
<CustomField>
    <fullName>SRO_Officer_Names__c</fullName>
    <label>SRO Officer Names</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebecca Tacey</fullName>
                <label>Gary Yip</label>
            </value>
            <value>
                <fullName>Damian Stevens</fullName>
            </value>
            <value>
                <fullName>Levi Davison</fullName>
            </value>
            <value>
                <fullName>Timothy McGrath</fullName>
            </value>
            <value>
                <fullName>Erin Gillespie</fullName>
            </value>
            <value>
                <fullName>Hamish Porter</fullName>
            </value>
            <value>
                <fullName>Mithu Dasgupta</fullName>
            </value>
            <value>
                <fullName>Irfat Begum</fullName>
            </value>
            <value>
                <fullName>Andrew Bulluss</fullName>
                <isActive>false</isActive>
                <label>Andrew Bulluss</label>
            </value>
            <value>
                <fullName>Aneesh Ayyappankutty</fullName>
                <isActive>false</isActive>
                <label>Aneesh Ayyappankutty</label>
            </value>
            <value>
                <fullName>Brendan Harrison</fullName>
                <isActive>false</isActive>
                <label>Brendan Harrison</label>
            </value>
            <value>
                <fullName>Caitlin Caligari</fullName>
                <isActive>false</isActive>
                <label>Caitlin Caligari</label>
            </value>
            <value>
                <fullName>Cassie Sporton</fullName>
                <isActive>false</isActive>
                <label>Cassie Sporton</label>
            </value>
            <value>
                <fullName>DEMO</fullName>
                <isActive>false</isActive>
                <label>DEMO</label>
            </value>
            <value>
                <fullName>Dudley Robens</fullName>
                <isActive>false</isActive>
                <label>Dudley Robens</label>
            </value>
            <value>
                <fullName>Jacqui Stepnell</fullName>
                <isActive>false</isActive>
                <label>Jacqui Stepnell</label>
            </value>
            <value>
                <fullName>Manish Jhingran</fullName>
                <isActive>false</isActive>
                <label>Manish Jhingran</label>
            </value>
            <value>
                <fullName>Mark Gittins</fullName>
                <isActive>false</isActive>
                <label>Mark Gittins</label>
            </value>
            <value>
                <fullName>Matthew Saliba</fullName>
                <isActive>false</isActive>
                <label>Matthew Saliba</label>
            </value>
            <value>
                <fullName>Michael Walker</fullName>
                <isActive>false</isActive>
                <label>Michael Walker</label>
            </value>
            <value>
                <fullName>Paul McKee</fullName>
                <isActive>false</isActive>
                <label>Paul McKee</label>
            </value>
            <value>
                <fullName>Piyush Bedi</fullName>
                <isActive>false</isActive>
                <label>Piyush Bedi</label>
            </value>
            <value>
                <fullName>Sandra Phan</fullName>
                <isActive>false</isActive>
                <label>Sandra Phan</label>
            </value>
            <value>
                <fullName>Tim McGrath</fullName>
                <isActive>false</isActive>
                <label>Tim McGrath</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>