force-app/main/default/objects/Conga_Setting__mdt/fields/TemplatedID__c.field-meta.xml
<CustomField>
    <fullName>TemplatedID__c</fullName>
    <label>TemplatedID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>