force-app/main/default/objects/Conga_Setting__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>SRO_Officer_Names__c</columns>
    <columns>TemplatedID__c</columns>
    <columns>QueryID__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>